[metadata]
name = xraylarch
provides = larch
description = Synchrotron X-ray data analysis in python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Matthew Newville and the xraylarch development team
author_email = newville@cars.uchicago.edu
url = https://lmfit.github.io//lmfit-py/
license = BSD 3-Clause
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
keywords = X-ray, XAS, XRF
project_urls =
    Source = https://github.com/xraypy/xraylarch
    Documentation = https://xraypy.github.io/xraylarch/
    Tracker = https://github.com/xraypy/xraylarch/issues

[options]
packages = larch
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    asteval>=0.9.28
    numpy>=1.20
    scipy>=1.7
    uncertainties>=3.1.4
    lmfit>=1.2.1
    uncertainties>=3.1
    pyshortcuts>=1.9.0
    xraydb>=4.5
    silx>=0.15.2
    matplotlib>=3.5
    sqlalchemy>=2.0
    sqlalchemy_utils
    h5py>=3.2
    hdf5plugin
    pillow>=8.3.2
    numdifftools
    pandas
    packaging
    pip
    pyyaml
    toml
    termcolor
    psycopg2-binary
    dill
    imageio
    charset-normalizer
    peakutils
    requests
    scikit-image
    scikit-learn
    psutil
    pymatgen
    pycifrw
    fabio
    pyfai
    numexpr==2.8.4; python_version < '3.9'
    numexpr>=2.8.7; python_version > '3.8'

[options.extras_require]
wxgui =
    wxpython>=4.1
    wxutils>=0.3.0
    wxmplot>=0.9.53

qtgui =
    PyQt5
    pyqtwebengine
    pyqtgraph

epics =
    pyepics>=3.5.0
    epicsapps

doc =
    ipykernel
    jupyter_sphinx>=0.2.4
    pillow
    pycairo;platform_system=="Windows"
    sphinx
    numpydoc
    sphinxcontrib-bibtex
    sphinxcontrib-argdoc

dev =
    pytest
    pytest-cov
    coverage
    build
    pre-commit
    twine
    dill

all =
    %(dev)s
    %(doc)s
    %(doc)s
    %(wxgui)s
    %(qtgui)s
    %(epics)s

[rstcheck]
report=warning
ignore_substitutions=release
ignore_roles=scipydoc,numpydoc
ignore_directives=autoclass,autodoc,autofunction,automethod,jupyter-execute,math

[coverage:run]
omit = tests/*

[tool:pytest]
addopts = --cov=larch --cov-report html
