[metadata]
name = xraylarch
provides = larch
description = Synchrotron X-ray data analysis in python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Matthew Newville and the xraylarch development team
author_email = newville@cars.uchicago.edu
url = https://xraypy.github.io//xraylarch
license = BSD 3-Clause
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
keywords = X-ray, XAS, XRF
project_urls =
    Source = https://github.com/xraypy/xraylarch
    Documentation = https://xraypy.github.io/xraylarch/
    Tracker = https://github.com/xraypy/xraylarch/issues

[options]
zip_safe = False
packages = larch
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.22,<2
    scipy>=1.7
    lmfit>=1.2.2
    asteval>=1.0
    uncertainties>=3.2.1
    pyshortcuts>=1.9.0
    xraydb>=4.5
    silx>=0.15.2
    matplotlib>=3.5
    sqlalchemy>=2.0
    sqlalchemy_utils
    h5py>=3.2
    hdf5plugin
    pillow>=8.3.2
    numdifftools>=0.9.41
    pandas
    packaging
    pip
    pyyaml
    toml
    termcolor
    dill
    imageio
    charset-normalizer
    requests
    scikit-image
    scikit-learn
    psutil
    pymatgen<=2024.7.18
    mp_api
    pycifrw
    fabio
    pyfai
    tabulate
    numexpr>=2.8.7

[options.extras_require]
wxgui =
    wxpython>=4.2
    wxutils>=0.3.0
    wxmplot>=0.9.57

qtgui =
    PyQt5
    pyqtwebengine
    pyqtgraph

epics =
    pyepics>=3.5.0
    psycopg2-binary

jupyter =
    jupyter_core>=5.0
    jupyter_client
    jupyter_server
    notebook
    nbformat
    ipywidgets
    plotly
    bokeh
    py3dmol

doc =
    sphinx
    numpydoc
    sphinxcontrib-bibtex
    sphinxcontrib-argdoc
    pycairo; platform_system=="Windows"

dev =
    pytest
    pytest-cov
    coverage
    build
    pre-commit
    twine

larix =
    %(wxgui)s
    %(jupyter)s

all =
    %(dev)s
    %(doc)s
    %(wxgui)s
    %(qtgui)s
    %(jupyter)s
    %(epics)s

[options.entry_points]
console_scripts =
    larch = larch.apps:run_larch
    feff6l = larch.apps:run_feff6l
    feff8l = larch.apps:run_feff8l
    larch_server = larch.apps:run_larch_server
    larix = larch.apps:run_larix
    xasviewer = larch.apps:run_xas_viewer
    larch_xrf = larch.apps:run_larch_xrf
    larch_xrd1d = larch.apps:run_larch_xrd1d
    gse_mapviewer = larch.apps:run_gse_mapviewer
    epics_xrf = larch.apps:run_epics_xrf


[rstcheck]
report=warning
ignore_substitutions=release
ignore_roles=scipydoc,numpydoc
ignore_directives=autoclass,autodoc,autofunction,automethod,jupyter-execute,math

[coverage:run]
omit = tests/*

[tool:pytest]
addopts = --cov=larch --cov-report html
